# cargo-wdk-build-ci-test

./: Cargo.toml
.github/workflows/: cargo-wdk.yml
